--- a/_locales/en_GB/messages.json
+++ b/_locales/en_GB/messages.json
@@ -1980,5 +1980,93 @@
   "error_msg_here":{
     "message":"here",
     "description":"The text on the popup menu when an error has occurred"
+  },
+  "generaloptions2":{
+    "message":"General Options",
+    "description":"Title of one of the Options page tabs"
+  },
+  "debuginlogoption2":{
+    "message":"Show debug statements in Console Log",
+    "description":"Checkbox on the 'General' tab of the Options page"
+  },
+  "slows_down_extension":{
+    "message":"slows down the extension",
+    "description":"Text of an option telling users that the option slows down the extension"
+  },
+  "enter_url":{
+    "message":"enter a URL",
+    "description":"Placeholder text in the Custom Filter list URL bar"
+  },
+  "filterantisocial2":{
+    "message":"Antisocial filter list",
+    "description":"A filter list"
+  },
+  "filter_antisocial_explained":{
+    "message":"removes social media buttons",
+    "description":"A filter list explaination"
+  },
+  "filterannoyances2":{
+    "message":"Fanboy's Annoyances",
+    "description":"A filter list"
+  },
+  "filter_annoyances_explained":{
+    "message":"blocks in-page pop-ups, social media and related widgets, and other annoyances",
+    "description":"A filter list explaination"
+  },
+  "filterwarning_removal2":{
+    "message":"Adblock Warning Removal list",
+    "description":"A filter list. \"Adblock\" is written with a lowercase B in this string as it refers to ad blocking extensions in general, not just AdBlock specifically."
+  },
+  "filter_warning_removal_explained":{
+    "message":"removes warnings about using ad blockers",
+    "description": "A filter list explaination"
+  },
+  "filterlistsrock2":{
+    "message":"The filter lists block most ads on the web. You can also...",
+    "description":"Header text on the Customize tab"
+  },
+  "blockmoreads2":{
+    "message":"Block more ads",
+    "description":"Subtitle on the 'Customize' tab"
+  },
+  "stop_blocking_ads2":{
+    "message":"Stop blocking ads",
+    "description":"Subtitle on the 'Customize' tab"
+  },
+  "manualfilteredit2":{
+    "message":"Manually edit your filters",
+    "description":"Subtitle on the 'Customize' tab"
+  },
+  "manualexcludefilteredit2":{
+    "message":"Edit disabled filters",
+    "description":"Subtitle on the 'Customize' tab"
+  },
+  "filtersavewarning_part1":{
+    "message":"Be careful: if you make a mistake here a lot of other filters, including the official filters, could get broken too!",
+    "description":"Warning when manually editing filters -- first part not clickable."
+  },
+  "filtersavewarning_part2":{
+    "message":"Read the [[filter syntax tutorial]] to learn how to add advanced blacklist and whitelist filters.",
+    "description":"Warning when manually editing filters -- second part clickable."
+  },
+  "pwyw2":{
+    "message":"Pay What You Want!",
+    "description":"Text of a payment request link"
+  },
+  "translator_credit2":{
+    "message":"Credit for translation goes to...",
+    "description":"This message will be followed by a list of names of the translators who contributed to the language AdBlock is currently displayed in. Do not add any names to this string."
+  },
+  "selectlanguage2":{
+    "message":"select language",
+    "description":"First option in the language dropdown menu on the Filter lists tab."
+  },
+  "allow_whitelisting_youtube_channels2":{
+    "message":"Allow whitelisting of specific YouTube™ channels",
+    "description":"Checkbox on the 'General' tab of the Options page"
+  },
+  "require_restart_browser":{
+    "message":"requires restarting your browser",
+    "description":"Text displayed within an option to notify users to restart the browser to fully enable the option"
   }
 }
