--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,12 @@
 
 UNRELEASED:
 
+Version: 3.42.0, Date: 2019-03-21
+- Updated the look and layout of the AdBlock Options page
+- Added a channel name cache to reduce the of number YT API calls
+- Cleaned up, and removed old, unused Safari logic
+- Added the Lato font files to the extension, and changed the AdBlock popup menu, and Options pages to use the new font
+
 Version: 3.41.0, Date: 2019-02-22
 - Added error handling to the popup menu
 
