--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -7,6 +7,14 @@
     "message": "A extensão do Chrome mais popular, com mais de 60 milhões de usuários! Bloqueia todos os anúncios na internet.",
     "description": "Extension description in manifest. Should not exceed 132 characters."
   },
+  "name_devbuild": {
+    "description": "Extension name to be shown for development builds. Note: this cannot be longer than 45 characters. Should not be translated",
+    "message": "Versão de desenvolvimento AdBlock"
+  },
+  "name_releasebuild": {
+    "description": "Extension name to be shown for release \/ published builds.  Should not be translated",
+    "message": "AdBlock"
+  },
   "description_edge": {
     "message": "AdBlock. O bloqueador de anúncios Nº1 com mais de 200 milhões de downloads. Bloqueia todos os anúncios na internet.",
     "description": "Description for the AdBlock for Edge extension. Should not exceed 132 characters."
@@ -1865,6 +1873,14 @@
     "message": "Habilitar MyAdBlock",
     "description": "The text of the menu item in the popup menu that takes you to the MyAdBlock Enrollment page"
   },
+  "adblockprotectenrollmentbutton": {
+    "message": "Experimente agora — É gratuito",
+    "description": "The text of the button in the menu item in the popup menu for AdBlock Protect extension.  Will automatically be converted to all uppercase"
+  },
+  "adblockprotectenrollmenttext": {
+    "message": "Mantenha suas informações pessoais em segurança com o AdBlock Protect",
+    "description": "The text of the menu item in the popup menu that takes users for the AdBlock Protect extension"
+  },
   "myadblockoptionspageheader": {
     "message": "Opções MyAdBlock",
     "description": "The text of the header the MyAdBlock Options page"
@@ -1912,5 +1928,145 @@
   "changes_to_adblock": {
     "message": "Fizemos mudanças no AdBlock!",
     "description": "Link to Options page with more information about the changes."
+  },
+  "new_myadblock_feature_available": {
+    "message": "Clique aqui para desbloquear novos recursos!",
+    "description": "The text in the popup menu item saying there is a new MyAdBlock feature and takes you to the MyAdBlock tab in the option page."
+  },
+  "images_coming_soon": {
+    "message": "Mais imagens em breve!",
+    "description": "The text telling MyAdBlock active users that there will be more photos for MyAdBlock."
+  },
+  "myadblock_pic_replacemenet_description": {
+    "message": "Substitua anúncios com imagens que você gosta",
+    "description": "The text briefly describing what the feature does in the MyAdBlock tab in the option page."
+  },
+  "myadblock_payment_not_available_title": {
+    "message": "AH, NÃO! Não conseguimos nos conectar aos nossos servidores",
+    "description": "The title of an error message box in the MyAdBlock tab in option page when we cannot load iframe."
+  },
+  "myadblock_payment_not_available_text": {
+    "message": "Estamos tão felizes que você está interessado no MyAdBlock! Infelizmente, não temos como processar pagamentos nesste momento. Tente novamente mais tarde.",
+    "description": "The text of an error message box in the MyAdBlock tab in option page when we cannot load iframe."
+  },
+  "myadblock_options_page_header": {
+    "message": "MyAdBlock",
+    "description": "The text of the header the MyAdBlock Options page"
+  },
+  "myadblock_picreplacement_exlained": {
+    "message": "Selecione as categorias abaixo e o AdBlock vai ocasionalmente substituir anúncios com imagens de alta qualidade para alegrar o seu dia.",
+    "description": "The label text for the switch on the MyAdBlock Options page"
+  },
+  "error_msg_header": {
+    "message": "Opa! O menu AdBlock encontrou um problema ao carregar.",
+    "description": "The text on the popup menu when an error has occurred"
+  },
+  "error_msg_help_us": {
+    "message": "Ajude-nos a resolver esse problema nos enviando dados para analisarmos: clique ",
+    "description": "The text on the popup menu when an error has occurred"
+  },
+  "error_msg_thank_you": {
+    "message": "Obrigado",
+    "description": "The text on the popup menu when an error has occurred"
+  },
+  "error_msg_reload": {
+    "message": "Agora, tente recarregar a extensão: clique ",
+    "description": "The text on the popup menu when an error has occurred"
+  },
+  "error_msg_help": {
+    "message": "Caso isso não funcione, obtenha mais ajuda: clique ",
+    "description": "The text on the popup menu when an error has occurred"
+  },
+  "error_msg_here": {
+    "message": "aqui",
+    "description": "The text on the popup menu when an error has occurred"
+  },
+  "generaloptions2": {
+    "message": "Opções gerais",
+    "description": "Title of one of the Options page tabs"
+  },
+  "debuginlogoption2": {
+    "message": "Exibir declarações de debug no Console Log",
+    "description": "Checkbox on the 'General' tab of the Options page"
+  },
+  "slows_down_extension": {
+    "message": "isso deixa a extensão mais lenta",
+    "description": "Text of an option telling users that the option slows down the extension"
+  },
+  "enter_url": {
+    "message": "insira um URL",
+    "description": "Placeholder text in the Custom Filter list URL bar"
+  },
+  "filterantisocial2": {
+    "message": "Lista de filtros antisocial",
+    "description": "A filter list"
+  },
+  "filter_antisocial_explained": {
+    "message": "remove os botões de mídias sociais",
+    "description": "A filter list explaination"
+  },
+  "filterannoyances2": {
+    "message": "Fanboy's Annoyances",
+    "description": "A filter list"
+  },
+  "filter_annoyances_explained": {
+    "message": "bloqueia pop-ups dentro das páginas, widgets de mídias sociais e relacionados, entre outras chateações",
+    "description": "A filter list explaination"
+  },
+  "filterwarning_removal2": {
+    "message": "Lista AdBlock Warning Removal",
+    "description": "A filter list. \"Adblock\" is written with a lowercase B in this string as it refers to ad blocking extensions in general, not just AdBlock specifically."
+  },
+  "filter_warning_removal_explained": {
+    "message": "remove avisos sobre o uso de bloqueadores de anúncio",
+    "description": "A filter list explaination"
+  },
+  "filterlistsrock2": {
+    "message": "A listas de filtros bloqueia a maioria dos anúncios na internet. Você também pode...",
+    "description": "Header text on the Customize tab"
+  },
+  "blockmoreads2": {
+    "message": "Bloquear mais anúncios",
+    "description": "Subtitle on the 'Customize' tab"
+  },
+  "stop_blocking_ads2": {
+    "message": "Parar de bloquear anúncios",
+    "description": "Subtitle on the 'Customize' tab"
+  },
+  "manualfilteredit2": {
+    "message": "Alterar seus filtros manualmente",
+    "description": "Subtitle on the 'Customize' tab"
+  },
+  "manualexcludefilteredit2": {
+    "message": "Alterar filtros desabilitados",
+    "description": "Subtitle on the 'Customize' tab"
+  },
+  "filtersavewarning_part1": {
+    "message": "Cuidado: caso você cometa um engano aqui, muitos outros filtros, inclusive os oficiais, podem parar de funcionar também!",
+    "description": "Warning when manually editing filters -- first part not clickable."
+  },
+  "filtersavewarning_part2": {
+    "message": "Leia o [[tutorial de sintaxe de filtros]] para aprender como adicionar listas negras e filtros de exceções avançados.",
+    "description": "Warning when manually editing filters -- second part clickable."
+  },
+  "pwyw2": {
+    "message": "Pague o quanto quiser!",
+    "description": "Text of a payment request link"
+  },
+  "translator_credit2": {
+    "message": "Os méritos pela tradução vão para...",
+    "description": "This message will be followed by a list of names of the translators who contributed to the language AdBlock is currently displayed in. Do not add any names to this string."
+  },
+  "selectlanguage2": {
+    "message": "selecione o idioma",
+    "description": "First option in the language dropdown menu on the Filter lists tab."
+  },
+  "allow_whitelisting_youtube_channels2": {
+    "message": "Permitir exceções de canais de YouTube™ específicos",
+    "description": "Checkbox on the 'General' tab of the Options page"
+  },
+  "require_restart_browser": {
+    "message": "necessita reiniciar o navegador",
+    "description": "Text displayed within an option to notify users to restart the browser to fully enable the option"
   }
 }
