--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -7,6 +7,14 @@
     "message": "Самое популярное расширение для Chrome, которым пользуется уже 60 миллионов человек! Больше никакой рекламы в Интернете.",
     "description": "Extension description in manifest. Should not exceed 132 characters."
   },
+  "name_devbuild": {
+    "description": "Extension name to be shown for development builds. Note: this cannot be longer than 45 characters. Should not be translated",
+    "message": "AdBlock development build"
+  },
+  "name_releasebuild": {
+    "description": "Extension name to be shown for release \/ published builds.  Should not be translated",
+    "message": "AdBlock"
+  },
   "description_edge": {
     "message": "AdBlock. Лучший блокировщик рекламы, 200 миллионов загрузок. Больше никакой рекламы в Интернете.",
     "description": "Description for the AdBlock for Edge extension. Should not exceed 132 characters."
@@ -200,7 +208,7 @@
     "description": "Checkbox in the whitelist wizard"
   },
   "wizardcantrunonframesets": {
-    "message": "Эта функция AdBlock не может быть использована, потому что сайт создан с использованием устаревших технологий. Используйте вкладку \"Настроить\" в меню Параметров, чтобы вручную вносить сайты в черный\/белый список.",
+    "message": "Эта функция AdBlock не может быть использована, потому что сайт создан с использованием устаревших технологий. Используйте вкладку \"Настроить\" в меню \"Параметры\", чтобы вручную вносить сайты в черный\/белый список.",
     "description": "Alert shown when the user tries to use a blacklist\/whitelist wizard on an old website"
   },
   "subscribeconfirm": {
@@ -1865,6 +1873,14 @@
     "message": "Включить MyAdBlock",
     "description": "The text of the menu item in the popup menu that takes you to the MyAdBlock Enrollment page"
   },
+  "adblockprotectenrollmentbutton": {
+    "message": "Попробуйте прямо сейчас — бесплатно",
+    "description": "The text of the button in the menu item in the popup menu for AdBlock Protect extension.  Will automatically be converted to all uppercase"
+  },
+  "adblockprotectenrollmenttext": {
+    "message": "AdBlock Protect защитит тайну вашей личной жизни",
+    "description": "The text of the menu item in the popup menu that takes users for the AdBlock Protect extension"
+  },
   "myadblockoptionspageheader": {
     "message": "Параметры MyAdBlock",
     "description": "The text of the header the MyAdBlock Options page"
@@ -1912,5 +1928,145 @@
   "changes_to_adblock": {
     "message": "Мы внесли в AdBlock некоторые изменения!",
     "description": "Link to Options page with more information about the changes."
+  },
+  "new_myadblock_feature_available": {
+    "message": "Щелкните, чтобы открыть новые функции!",
+    "description": "The text in the popup menu item saying there is a new MyAdBlock feature and takes you to the MyAdBlock tab in the option page."
+  },
+  "images_coming_soon": {
+    "message": "Больше фотографий уже совсем скоро!",
+    "description": "The text telling MyAdBlock active users that there will be more photos for MyAdBlock."
+  },
+  "myadblock_pic_replacemenet_description": {
+    "message": "Замените рекламу на любимые картинки",
+    "description": "The text briefly describing what the feature does in the MyAdBlock tab in the option page."
+  },
+  "myadblock_payment_not_available_title": {
+    "message": "О нет! Мы не смогли подключиться к нашим серверам",
+    "description": "The title of an error message box in the MyAdBlock tab in option page when we cannot load iframe."
+  },
+  "myadblock_payment_not_available_text": {
+    "message": "Мы очень рады, что вы заинтересовались MyAdBlock! К сожалению, пока мы не можем обработать ваш платеж. Попробуйте еще раз попозже.",
+    "description": "The text of an error message box in the MyAdBlock tab in option page when we cannot load iframe."
+  },
+  "myadblock_options_page_header": {
+    "message": "MyAdBlock",
+    "description": "The text of the header the MyAdBlock Options page"
+  },
+  "myadblock_picreplacement_exlained": {
+    "message": "Выберите категорию из списка ниже, и периодически AdBlock будет заменять рекламу на HD-изображения и поднимать вам настроение.",
+    "description": "The label text for the switch on the MyAdBlock Options page"
+  },
+  "error_msg_header": {
+    "message": "Ой-ой! Простите, но AdBlock не смог загрузить меню.",
+    "description": "The text on the popup menu when an error has occurred"
+  },
+  "error_msg_help_us": {
+    "message": "Помогите нам решить эту проблему, отправив нам данные о поломке: нажмите ",
+    "description": "The text on the popup menu when an error has occurred"
+  },
+  "error_msg_thank_you": {
+    "message": "Спасибо",
+    "description": "The text on the popup menu when an error has occurred"
+  },
+  "error_msg_reload": {
+    "message": "Попробуйте перезагрузить расширение: нажмите ",
+    "description": "The text on the popup menu when an error has occurred"
+  },
+  "error_msg_help": {
+    "message": "Если это не помогло, то здесь вам обязательно помогут: нажмите ",
+    "description": "The text on the popup menu when an error has occurred"
+  },
+  "error_msg_here": {
+    "message": "здесь",
+    "description": "The text on the popup menu when an error has occurred"
+  },
+  "generaloptions2": {
+    "message": "Общие параметры",
+    "description": "Title of one of the Options page tabs"
+  },
+  "debuginlogoption2": {
+    "message": "Показывать данные об отладке в журнале консоли",
+    "description": "Checkbox on the 'General' tab of the Options page"
+  },
+  "slows_down_extension": {
+    "message": "замедляет расширение",
+    "description": "Text of an option telling users that the option slows down the extension"
+  },
+  "enter_url": {
+    "message": "введите URL",
+    "description": "Placeholder text in the Custom Filter list URL bar"
+  },
+  "filterantisocial2": {
+    "message": "Список антисоциальных фильтров",
+    "description": "A filter list"
+  },
+  "filter_antisocial_explained": {
+    "message": "убирает кнопки социальных сетей",
+    "description": "A filter list explaination"
+  },
+  "filterannoyances2": {
+    "message": "Услада фаната",
+    "description": "A filter list"
+  },
+  "filter_annoyances_explained": {
+    "message": "скрывает всплывающие окна, виджеты социальных сетей и прочую рекламу",
+    "description": "A filter list explaination"
+  },
+  "filterwarning_removal2": {
+    "message": "Список антиантиблокировщиков рекламы",
+    "description": "A filter list. \"Adblock\" is written with a lowercase B in this string as it refers to ad blocking extensions in general, not just AdBlock specifically."
+  },
+  "filter_warning_removal_explained": {
+    "message": "убирает предупреждения об использовании блокировщика рекламы",
+    "description": "A filter list explaination"
+  },
+  "filterlistsrock2": {
+    "message": "Списки фильтров блокируют большую часть рекламы в Интернете. Вы также можете...",
+    "description": "Header text on the Customize tab"
+  },
+  "blockmoreads2": {
+    "message": "Скрывать еще больше рекламы",
+    "description": "Subtitle on the 'Customize' tab"
+  },
+  "stop_blocking_ads2": {
+    "message": "Перестать скрывать рекламу",
+    "description": "Subtitle on the 'Customize' tab"
+  },
+  "manualfilteredit2": {
+    "message": "Настроить фильтры вручную",
+    "description": "Subtitle on the 'Customize' tab"
+  },
+  "manualexcludefilteredit2": {
+    "message": "Настроить отключенные фильтры",
+    "description": "Subtitle on the 'Customize' tab"
+  },
+  "filtersavewarning_part1": {
+    "message": "Будьте очень внимательны: если вы сейчас ошибетесь, то можете сломать целую кучу других фильтров, включая даже официальные!",
+    "description": "Warning when manually editing filters -- first part not clickable."
+  },
+  "filtersavewarning_part2": {
+    "message": "Ознакомьтесь с [[учебником по синтаксису фильтров]], чтобы узнать, как добавлять продвинутые фильтры и создавать белый список.",
+    "description": "Warning when manually editing filters -- second part clickable."
+  },
+  "pwyw2": {
+    "message": "Платите, сколько хотите!",
+    "description": "Text of a payment request link"
+  },
+  "translator_credit2": {
+    "message": "Над переводом работали...",
+    "description": "This message will be followed by a list of names of the translators who contributed to the language AdBlock is currently displayed in. Do not add any names to this string."
+  },
+  "selectlanguage2": {
+    "message": "выбрать язык",
+    "description": "First option in the language dropdown menu on the Filter lists tab."
+  },
+  "allow_whitelisting_youtube_channels2": {
+    "message": "Разрешить вносить отдельные каналы YouTube™ в белый список",
+    "description": "Checkbox on the 'General' tab of the Options page"
+  },
+  "require_restart_browser": {
+    "message": "требуется перезапуск браузера",
+    "description": "Text displayed within an option to notify users to restart the browser to fully enable the option"
   }
 }
